Creacion del footer

--- a/Frontend/src/app/shared/components/footer/footer.html
+++ b/Frontend/src/app/shared/components/footer/footer.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+<footer>
+    <div>
+        Call us 
+        <div>
+            +1 234 567 890
+        </div>
+    </div>
+    <div>
+        Email 
+        <div>
+            contact@linker.com
+        </div>
+    </div>
+    <div>
+        Follow us
+        <div>
+            <i class="fa-brands fa-facebook" style="color:white;"></i>
+            <i class="fa-brands fa-x-twitter" style="color:white;"></i>
+            <i class="fa-brands fa-linkedin" style="color:white;"></i>
+            <i class="fa-brands fa-instagram" style="color:white;"></i>
+        </div>
+    </div>
+</footer>
