Actualizacion de Header

--- a/Frontend/src/app/shared/components/header/header.html
+++ b/Frontend/src/app/shared/components/header/header.html
@@ -1,21 +1,21 @@
 <header>
   <nav>
     <ul>
-      <li>
+      <li routerLink="" style="cursor: pointer;">
         <img src="assets/img/logo.png" alt="Logo" class="logo" />
         <h1>Linker</h1>
       </li>
 
       <li class="SectionBar">
-        <span>Inicio</span>
-        <span>Perfil Postulante</span>
-        <span>Perfil Empresa</span>
-        <span>Match</span>
-        <span>Bienvenido</span>
+        <a routerLink="">Inicio</a>
+        <a>Perfil Postulante</a>
+        <a>Perfil Empresa</a>
+        <a routerLink="match">Match</a>
+        <a>Bienvenido</a>
       </li>
 
       <li>
-        <button class="LoginButton">Iniciar Sesión</button>
+        <button class="LoginButton" routerLink="signin">Iniciar Sesión</button>
       </li>
     </ul>
   </nav>
