--- a/Frontend/src/app/shared/components/header/header.css
+++ b/Frontend/src/app/shared/components/header/header.css
@@ -6,8 +6,11 @@
 header {
   background-color: #000000;
   color: white;
-  padding: 20px;
+  padding: 10px;
   font-family: 'Rubik', sans-serif;
+  position: sticky;
+  width: 100%;
+  top: 0;
 }
 
 nav ul {
@@ -34,6 +37,10 @@ h1 {
     margin: 0;
     font-family: 'Quicksand', sans-serif !important;
     font-weight: 900;
+}
+
+a {
+  text-decoration: none;
 }
 
 .LoginButton {
