Creando componente Login

--- a/Frontend/src/app/features/login/login.html
+++ b/Frontend/src/app/features/login/login.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<section>
+  <div class="loginForm">
+    <h2>Iniciar Sesión</h2>
+    <form>
+        <a>¿Es tu primera vez? Regístrate</a>
+      <div class="form-group">
+        <label for="email">Email *</label>
+        <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
+      </div>
+      <div class="form-group">
+        <label for="password">Contraseña</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Ingresa tu contraseña"
+          required
+        />
+      </div>
+      <a>¿Olvidaste tu contraseña?</a>
+      <div class="form-group">
+        <button type="submit">Iniciar sesión</button>
+        <p>o conéctate con</p>
+        <div class="icons">
+            <i class="fab fa-google"></i>
+            <i class="fab fa-facebook-f"></i>
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
