--- a/Frontend/src/app/shared/components/header/header.html
+++ b/Frontend/src/app/shared/components/header/header.html
@@ -15,7 +15,7 @@
       </li>
 
       <li>
-        <button class="LoginButton" routerLink="signin">Iniciar Sesión</button>
+        <button class="LoginButton" routerLink="login">Iniciar Sesión</button>
       </li>
     </ul>
   </nav>
