--- a/Frontend/src/app/features/login/login.css
+++ b/Frontend/src/app/features/login/login.css
@@ -68,10 +68,12 @@ input {
 }
 
 button {
-    padding: 10px 20px;
+    padding: 14px 20px;
     background-color: white;
     border-radius: 5px;
     border: white;
+    font-weight: 800;
+    font-size: 14px;
 }
 
 .form-group {
