Ajustes del header

--- a/Frontend/src/app/shared/components/header/header.html
+++ b/Frontend/src/app/shared/components/header/header.html
@@ -8,10 +8,10 @@
 
       <li class="SectionBar">
         <a routerLink="">Inicio</a>
-        <a>Perfil Postulante</a>
-        <a>Perfil Empresa</a>
+        <a routerLink="">Perfil Postulante</a>
+        <a routerLink="">Perfil Empresa</a>
         <a routerLink="match">Match</a>
-        <a>Bienvenido</a>
+        <a routerLink="">Bienvenido</a>
       </li>
 
       <li>
