--- a/Frontend/src/app/shared/components/header/header.css
+++ b/Frontend/src/app/shared/components/header/header.css
@@ -41,6 +41,37 @@ h1 {
 
 a {
   text-decoration: none;
+  color: white;
+}
+
+nav a {
+  position: relative;
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+nav a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  display: block;
+  margin-top: 5px;
+  right: 0;
+  background: #ff6648;
+  transition: width 0.3s ease;
+  -webkit-transition: width 0.3s ease;
+}
+
+nav a:hover {
+  color: #ff6648;
+}
+
+nav a:hover::after {
+  width: 100%;
+  left: 0;
+  background: #ff6648;
 }
 
 .LoginButton {
@@ -58,8 +89,7 @@ a {
 }
 
 .SectionBar {
-  background-color: #ffffff;
-  color: #000000;
+  color: white;
   width: 60%;
   height: 3rem;
   display: flex;
@@ -68,4 +98,7 @@ a {
   border-radius: 8px;
   padding-left: 20px;
   padding-right: 20px;
+  font-size: 1.125rem !important;
+  font-family: 'Syne', sans-serif !important;
+
 }
