--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,7 +1,7 @@
 :root {
   --blue: #0259DD;   /* Azul fuerte */
   --coral: #FF6648; /* Naranja coral */
-  --soft-blur: #84AFFB;    /* Azul claro */
+  --soft-blue: #84AFFB;    /* Azul claro */
   --peach: #FFE1D7;      /* Durazno pastel */
   --gray: #2E2E2E;      /* Texto oscuro */
   --color-light: #F5F6FA;     /* Fondo claro */
