--- a/Frontend/src/app/shared/components/header/header.html
+++ b/Frontend/src/app/shared/components/header/header.html
@@ -8,7 +8,7 @@
 
       <li class="SectionBar">
         <a routerLink="">Inicio</a>
-        <a routerLink="">Perfil Postulante</a>
+        <a routerLink="postulante">Perfil Postulante</a>
         <a routerLink="">Perfil Empresa</a>
         <a routerLink="match">Match</a>
         <a routerLink="">Bienvenido</a>
