Corregi mensaje del idioma.html

--- a/Frontend/src/app/features/perfil-postulante/perfil-postulante.html
+++ b/Frontend/src/app/features/perfil-postulante/perfil-postulante.html
@@ -72,7 +72,7 @@
       <label>Idioma {{ i + 1 }}</label>
     </div>
     <select [(ngModel)]="idioma.nombre">
-      <option value="">Selecciona una habilidad</option>
+      <option value="">Selecciona un idioma</option>
       <option value="Español">Español</option>
       <option value="Inglés">Inglés</option>
       <option value="Italiano">Italiano</option>
