Añado la vista de la empresa

--- a/Frontend/src/app/shared/components/header/header.html
+++ b/Frontend/src/app/shared/components/header/header.html
@@ -9,7 +9,7 @@
       <li class="SectionBar">
         <a routerLink="">Inicio</a>
         <a routerLink="postulante">Perfil Postulante</a>
-        <a routerLink="">Perfil Empresa</a>
+        <a routerLink="empresa">Perfil Empresa</a>
         <a routerLink="match">Match</a>
         <a routerLink="">Bienvenido</a>
       </li>
