--- a/Frontend/src/app/features/match/swipe/swipe.html
+++ b/Frontend/src/app/features/match/swipe/swipe.html
@@ -6,7 +6,7 @@
         <div class="floating-icons">
             <img class="black-row" alt="black-row" src="assets/img/match-black-row.webp"/>
             <img class="black-row-mirror" alt="black-row-mirror" src="assets/img/match-black-row.webp"/>
-            <img class="filter" alt="filter" src="assets/img/match-filter-icon.webp"/>
+            <img class="filter" alt="filter" src="assets/img/match-filter-icon.webp" (click)="filterActivated()"/>
             <img class="up-row" alt="up-row" src="assets/img/match-row.webp"/>
             <h4>
                 Oportunidad de Crecimiento Personal
