--- a/Frontend/src/app/features/match/swipe/swipe.css
+++ b/Frontend/src/app/features/match/swipe/swipe.css
@@ -73,6 +73,12 @@ p {
 
     top: 10px; 
     right: 10px;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.filter:active {
+  transform: scale(0.85);
+  background-color: rgba(163, 162, 160, 0.9);
 }
 
 .black-row {
