Correcion de bugs y redireccionamiento

--- a/Frontend/src/app/features/login/login.css
+++ b/Frontend/src/app/features/login/login.css
@@ -54,6 +54,8 @@ a {
     text-decoration: underline;
     font-size: 16px;
     justify-self: center;
+    cursor: pointer;
+    color: white;
 }
 
 input {
