--- a/Frontend/src/app/features/signup-empresas/signup-empresas.html
+++ b/Frontend/src/app/features/signup-empresas/signup-empresas.html
@@ -23,7 +23,7 @@
             </div>
             <div class="link">
             <button type="submit">Registrar</button> 
-            <a > ¿Ya eres miembro? <br> Inicia Sesión </a>
+            <a routerLink="/login"> ¿Ya eres miembro? <br> Inicia Sesión </a>
             </div>
         </form>
     </div>
