--- a/Frontend/src/app/features/login/login.html
+++ b/Frontend/src/app/features/login/login.html
@@ -2,7 +2,7 @@
   <div class="loginForm">
     <h2>Iniciar Sesión</h2>
     <form>
-        <a>¿Es tu primera vez? Regístrate</a>
+        <a routerLink="/signup">¿Es tu primera vez? Regístrate</a>
       <div class="form-group">
         <label for="email">Email *</label>
         <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
