--- a/Frontend/src/app/features/signup-empresas/signup-empresas.css
+++ b/Frontend/src/app/features/signup-empresas/signup-empresas.css
@@ -1,6 +1,13 @@
 section{
-    height: auto;
-    width: inherit;
+    justify-self: center;
+  align-self: center;
+  min-height: 85vh;
+  background-color: #333;
+  grid-area: 1 / 1 / 2 / 2;
+  pointer-events: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .signupForm {
