--- a/Frontend/src/app/features/signup/signup.html
+++ b/Frontend/src/app/features/signup/signup.html
@@ -1,36 +1,48 @@
+<section class="backgroud">
+  <div class="signupForm">
+    <h2>Registrate</h2>
+    <form>
+      <div class="link">
+        <a routerLink="/signup-empresa">¿Eres empresa y buscas registrarte? <br />
+          Haz click aqui
+        </a>
+      </div>
 
-    <section class="backgroud">
-        <div class="signupForm">
-        <h2>Registrate</h2>
-        <form>
-            <div class="link">
-            <a>¿Eres empresa y buscas registrarte? <br> Haz click aqui</a>
-            </div>
+      <div class="form">
+        <label>Nombres</label>
+        <input type="text" id="name" />
 
-            <div class="form">
-            <label>Nombres</label>
-            <input type="text" id="name"/>
-            
+        <label>Apellidos</label>
+        <input type="text" id="lastname" />
 
-            <label>Apellidos</label>
-            <input type="text" id="lastname"/>   
+        <label>Email</label>
+        <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
 
-            <label>Email</label>
-            <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
+        <label for="password">Contraseña</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Ingresa tu contraseña"
+          required
+        />
 
-            <label for="password">Contraseña</label>
-            <input type="password" id="password"name="password" placeholder="Ingresa tu contraseña" required />
- 
-
-            <label for="password">Confirmar contraseña</label>
-            <input type="password" id="repassword" name="repassword" placeholder="Ingresa tu contraseña" required />
-     
-            
-            </div>
-            <div class="link">
-            <button type="submit">Registrar</button> 
-            <a > ¿Ya eres miembro? <br> Inicia Sesión </a>
-            </div>
-        </form>
-    </div>
-    </section>
+        <label for="password">Confirmar contraseña</label>
+        <input
+          type="password"
+          id="repassword"
+          name="repassword"
+          placeholder="Ingresa tu contraseña"
+          required
+        />
+      </div>
+      <div class="link">
+        <button type="submit">Registrar</button>
+        <a routerLink="/login">
+          ¿Ya eres miembro? <br />
+          Inicia Sesión
+        </a>
+      </div>
+    </form>
+  </div>
+</section>
