--- a/Frontend/src/app/features/hero/hero.css
+++ b/Frontend/src/app/features/hero/hero.css
@@ -194,3 +194,54 @@ hr {
   margin-bottom: 1rem;
 }
 
+@media (max-width: 768px) {
+  .section-1 {
+    padding: 10rem 3rem;
+    min-height: 60vh;
+    /* margin-bottom: 3rem; */
+  }
+
+  .section-1 h1 {
+    font-size: 2rem;
+    font-family: 'Syne';
+    font-weight: 700;
+    margin-bottom: 1rem; 
+  }
+
+  .section-1 p {
+    margin-bottom: 3rem;
+    font-family: "Raleway";
+  }
+
+  .feature-1{
+    background-color: var(--color-light);
+    min-height: 60vh;
+    padding: 8rem 3rem;
+    text-align: center;
+  }
+
+  .feature-1 h2 {
+    font-size: 1.8rem;
+  }
+
+  .feature-1 img{
+    margin-top: 2rem;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  }
+
+  .feature-3, .feature-2 {
+    margin: 0; 
+    padding: 0;
+    min-height: 60vh;
+  }
+
+  .feature-2 .text-content h2, .feature-3 .text-content h2  {
+    font-size: 1.5rem;
+  }
+
+  .feature-2 .text-content p, .feature-3 .text-content h2 {
+    font-family: 0.5rem;
+  }
+}
