--- a/Frontend/src/app/features/hero/hero.html
+++ b/Frontend/src/app/features/hero/hero.html
@@ -1,74 +1,84 @@
+<section id="section-1" class="section-1">
+  <div class="section-1-content">
+    <div class="text-content">
+      <h1>
+        Encuentra el talento correcto. <br />
+        Consigue el trabajo ideal.
+      </h1>
+      <p>
+        Linker hace que buscar empleo o contratar talento <br />
+        sea simple, amigable e innovador. Conectando <br />
+        empresas y candidatos de una manera más inteligente
+      </p>
+      <button class="btn-login">Comienza ahora</button>
+    </div>
+  </div>
+</section>
 
-    <section id="section-1" class="section-1">
-        <div class="section-1-content">
-            <div class="text-content">
-                <h1>
-                    Encuentra el talento correcto. <br>
-                    Consigue el trabajo ideal.
-                </h1>
-                <p>
-                    Linker hace que buscar empleo o contratar talento <br>
-                    sea simple, amigable e innovador. Conectando <br>
-                    empresas y candidatos de una manera más inteligente
-                </p>
-                <button class="btn-login">Comienza ahora</button>
-            </div>     
-        </div>
-    </section>
+<div class="feature-1">
+  <h2>Descubre oportunidades cerca de ti</h2>
+  <p>
+    Usa nuestros filtros inteligentes para explorar miles de ofertas de empleo. Ajusta tu búsqueda
+    por ubicación, cargo, experiencia o modalidad (remoto, híbrido, presencial). Linker se adapta a
+    ti.
+  </p>
+  <img src="assets/img/feature-1.jpg" alt="Icono de CV" />
+</div>
 
-    
-    <div class="feature-1">
-        <h2>Descubre oportunidades cerca de ti</h2>
-        <p>Usa nuestros filtros inteligentes para explorar miles de ofertas de empleo. Ajusta tu búsqueda por ubicación, cargo, experiencia o modalidad (remoto, híbrido, presencial). Linker se adapta a ti.</p>
-        <img src="assets/img/feature-1.jpg" alt="Icono de CV">
+<div id="feature-2" class="feature-2">
+  <div class="text-content">
+    <hr />
+    <h2>Tu carrera, a un match de distancia.</h2>
+    <p>
+      ¿Buscas tu próxima oportunidad? Con Linker puedes aplicar filtros, explorar ofertas cerca de
+      ti o conectar al instante con nuestro sistema de swipe. Encontrar el trabajo ideal nunca había
+      sido tan fácil.
+    </p>
+    <hr />
+  </div>
+  <div class="image-content">
+    <img src="assets/img/feature-2.png" alt="Icono de contratación" />
+  </div>
+</div>
+
+<div class="feature-3">
+  <div class="image-content">
+    <img src="assets/img/feature-3.jpg" alt="Icono de colaboración" />
+  </div>
+  <div class="text-content">
+    <hr />
+    <h2>Contrata de forma más inteligente.</h2>
+    <p>
+      Linker te ayuda a encontrar candidatos ideales en menos tiempo. Publica tus vacantes, filtra
+      por habilidades y ubicación, o conecta al instante con nuestro sistema de swipe inteligente.
+      Ahorra tiempo, reduce costos y forma tu equipo soñado.
+    </p>
+    <hr />
+  </div>
+</div>
+
+<section id="section-3-steps" class="section-3-steps">
+  <h2>¿Como funciona Linker?</h2>
+
+  <div class="steps-container">
+    <div class="steps">
+      <img src="assets/img/celular.png" />
+      <h3>1. Crea tu perfil</h3>
+      <p>Las empresas publican ofertas y los candidatos muestran sus habilidades.</p>
+    </div>
+    <div class="steps">
+      <img src="assets/img/tocar.png" />
+      <h3>2. Busca o desliza</h3>
+      <p>
+        Usa filtros avanzados por ubicación, sector y experiencia, o prueba nuestro sistema
+        innovador de “swipe” para conectar al instante.
+      </p>
     </div>
 
-    <div id="feature-2" class="feature-2">
-        <div class="text-content">
-            <hr>
-            <h2>Tu carrera, a un match de distancia.</h2>
-            <p>¿Buscas tu próxima oportunidad? Con Linker puedes aplicar filtros, explorar ofertas cerca de ti o conectar al instante con nuestro sistema de swipe. Encontrar el trabajo ideal nunca había sido tan fácil.</p>
-            <hr>
-        </div>
-        <div class="image-content">
-            <img src="assets/img/feature-2.png" alt="Icono de contratación">
-        </div>
+    <div class="steps">
+      <img src="assets/img/red.png" />
+      <h3>3. Conecta con oportunidades</h3>
+      <p>Habla directamente con empresas o talentos a través de un proceso claro y amigable.</p>
     </div>
-
-    <div class="feature-3">
-        <div class="image-content">
-            <img src="assets/img/feature-3.jpg" alt="Icono de colaboración">
-        </div>
-        <div class="text-content">
-            <hr>
-            <h2>Contrata de forma más inteligente.</h2>
-            <p>Linker te ayuda a encontrar candidatos ideales en menos tiempo. Publica tus vacantes, filtra por habilidades y ubicación, o conecta al instante con nuestro sistema de swipe inteligente. Ahorra tiempo, reduce costos y forma tu equipo soñado.</p>
-            <hr>
-        </div>
-    </div>
-
-
-    <section id="section-3-steps" class="section-3-steps">
-        <h2>¿Como funciona Linker?</h2>
-
-        <div class="steps-container">
-        <div class="steps">
-            <img src ="assets/img/celular.png">
-            <h3>1. Crea tu perfil</h3>
-            <p>Las empresas publican ofertas y los candidatos muestran sus habilidades.</p>
- 
-        </div>
-        <div class="steps">
-            <img src= "assets/img/tocar.png">
-            <h3>2. Busca o desliza</h3>
-            <p>Usa filtros avanzados por ubicación, sector y experiencia, o prueba nuestro sistema innovador de “swipe” para conectar al instante.</p>
-        </div>
-
-        <div class="steps">
-            <img src= "assets/img/red.png">
-            <h3>3. Conecta con oportunidades</h3>
-            <p>Habla directamente con empresas o talentos a través de un proceso claro y amigable.</p>
-        </div>
-        </div>
-    </section>
-
+  </div>
+</section>
