--- a/Frontend/src/app/features/hero/hero.css
+++ b/Frontend/src/app/features/hero/hero.css
@@ -1,5 +1,3 @@
-
-
 .btn-login {
   background-color: var(--coral);
   color: var(--white);
@@ -10,10 +8,13 @@
   font-size: 1rem;
   font-weight: 600;
   transition: background-color 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);  
 }
 
 .btn-login:hover {
   background-color: var(--blue);
+  transform: translateY(-3px) scale(1.02);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
 
 .section-1 {
@@ -26,12 +27,9 @@
   min-height: 80vh;
 }
 
-
-
 .section-1-content {
   display: flex;
   align-items: center;
-  max-width: 1200px;
   gap: 2rem;
 }
 
@@ -43,77 +41,72 @@
   font-size: 2.5rem;
   font-family: 'Syne';
   font-weight: 700;
-  margin-bottom: 1rem; 
+  margin-bottom: 1rem;
 }
 
 .section-1 p {
   margin-bottom: 2rem;
-    font-family: "Raleway";
+  font-family: "Raleway";
 }
 
-.section-1 .btn-primary {
-  background-color: var(--coral);
-  color: var(--white);
-  padding: 0.8rem 1.5rem;
-  border-radius: 25px;
-  text-decoration: none;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
-}
-
-.section-1 .btn-primary:hover {
-  background-color: var(--blue);
-}
-
-.section-1 img{
-  width: 40%;
-  height: auto;
-}
-
-.feature-1{
+.feature-1 {
   background-color: var(--color-light);
   padding: 3% 20%;
   text-align: center;
 }
 
-.feature-1 img{
+.feature-1 img {
   margin-top: 1rem;
   width: 70%;
   height: 50%;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.feature-3, .feature-2 {
+img {
+  transition: transform 0.4s ease;
+}
+img:hover {
+  transform: scale(1.08);
+}
+
+.feature-3,
+.feature-2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row-reverse;
-  width: 100%;
-  margin: 0; 
+  margin: 0;
   padding: 0;
 }
 
-.feature-2 .image-content img, .feature-3 .image-content img{
+
+.feature-2 .image-content img,
+.feature-3 .image-content img {
   width: 100%;
-  height:auto;
   display: block;
+  object-fit: cover;
 }
 
-.feature-2 .text-content, .feature-3 .text-content{ 
+.feature-2 .text-content,
+.feature-3 .text-content {
   width: 50%;
   padding: 2% 5%;
 }
 
-.feature-2 .text-content h2, .feature-3 .text-content h2 , .feature-1 h2 {
+.feature-2 .text-content h2,
+.feature-3 .text-content h2,
+.feature-1 h2 {
   font-size: 2.5rem;
   font-family: "Syne", sans-serif;
-  margin-bottom: 1.5rem; 
+  margin-bottom: 1.5rem;
   overflow: hidden;
   animation: typing 4s steps(40, end) forwards, blink .75s step-end infinite;
 }
 
 
-.feature-2 .text-content p, .feature-3 .text-content p , .feature-1 p {
+.feature-2 .text-content p,
+.feature-3 .text-content p,
+.feature-1 p {
   color: var(--gray);
   font-size: 1.2rem;
   line-height: 1.5;
@@ -128,19 +121,19 @@
   background-color: var(--soft-blue);
 }
 
-.feature-2 .image-content , .feature-3 .image-content{
- width: 50%;
+.feature-2 .image-content,
+.feature-3 .image-content {
+  width: 50%;
 }
 
 hr {
   border: none;
-  border-top: 2px solid black; 
-  width: 100%; 
+  border-top: 2px solid black;
+  width: 100%;
   margin: 30px 0px;
 }
 
-
-.section-3-steps{
+.section-3-steps {
   display: flex;
   flex-direction: column;
   background-color: var(--gray);
@@ -155,14 +148,15 @@ hr {
   margin-top: 2rem;
 }
 
-.steps{
+.steps {
+  width: 30%;
   border-radius: 20px;
   padding: 2rem;
   text-align: center;
-  background: rgba(255,255,255,0.05);
+  background: rgba(255, 255, 255, 0.05);
 }
 
-.steps:hover{
+.steps:hover {
   background-color: #414141;
 }
 
@@ -189,59 +183,104 @@ hr {
 .section-3-steps h2 {
   text-align: center;
   font-size: 2.5rem;
-  font-family: "Syne", sans-serif;  
+  font-family: "Syne", sans-serif;
   color: var(--white);
   margin-bottom: 1rem;
 }
 
 @media (max-width: 768px) {
+
   .section-1 {
     padding: 10rem 3rem;
     min-height: 60vh;
-    /* margin-bottom: 3rem; */
   }
 
   .section-1 h1 {
     font-size: 2rem;
     font-family: 'Syne';
     font-weight: 700;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
   }
 
-  .section-1 p {
-    margin-bottom: 3rem;
-    font-family: "Raleway";
-  }
-
-  .feature-1{
-    background-color: var(--color-light);
-    min-height: 60vh;
+  .feature-1 {
     padding: 8rem 3rem;
     text-align: center;
   }
 
-  .feature-1 h2 {
-    font-size: 1.8rem;
+  h2{
+    font-size: 1.5rem;
+    font-family: "Syne", sans-serif;
+    margin-bottom: 0.5rem;
   }
 
-  .feature-1 img{
+
+  .feature-1 img {
     margin-top: 2rem;
     width: 100%;
     height: 100%;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   }
 
-  .feature-3, .feature-2 {
-    margin: 0; 
+  .feature-3,
+  .feature-2 {
+    display: flex;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    margin: 0;
     padding: 0;
-    min-height: 60vh;
   }
 
-  .feature-2 .text-content h2, .feature-3 .text-content h2  {
-    font-size: 1.5rem;
+  .feature-2 .image-content,
+  .feature-3 .image-content {
+    width: 100%;
+
   }
 
-  .feature-2 .text-content p, .feature-3 .text-content h2 {
-    font-family: 0.5rem;
+  .feature-2 .text-content,
+  .feature-3 .text-content {
+    width: 100%;
+    padding: 2% 5%;
   }
+
+  .section-3-steps {
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--gray);
+  }
+
+  .steps-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .steps h2{
+    color: var(--white);
+  }
+
+  .steps img {
+    margin-bottom: 1rem;
+  }
+
+  .steps{
+    width: 80%;
+  }
+
+  .steps h3 {
+    color: var(--white);
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    font-family: "Raleway", sans-serif;
+  }
+
+  .steps p {
+    color: var(--white);
+    font-family: "Rubik", sans-serif;
+    line-height: 1rem;
+    font-size: 0.5rem;
+  }
+
 }
