--- a/Frontend/src/app/features/perfil-empresa/perfil-empresa.html
+++ b/Frontend/src/app/features/perfil-empresa/perfil-empresa.html
@@ -8,62 +8,74 @@
   </div>
   <hr/>
 
-  <div class="campo">
+  <div class="campo descripcion-empresa">
     <div class="mini-titulo">
       <img src="assets/img/icono-lapiz.png" class="icon" />
-      <label>Descripción de la empresa</label>
+      <label class="descripcion">Descripción de la empresa</label>
     </div>
-    <input placeholder="Descripción de la empresa">
+    <textarea placeholder="Descripción de la empresa"></textarea>
   </div>
 
-  <div *ngFor="let vacante of vacantes; let i = index" class="campo">
+  <div *ngFor="let vacante of vacantes; let i = index">
     <div class="mini-titulo">
       <img src="assets/img/icono-lupa.png" class="icon" />
       <label>Vacante {{ i + 1 }}</label>
     </div>
-    <input type="text" placeholder="Título" />
-    <input placeholder="Descripción">
-    <input type="number" placeholder="Salario" />
-    <select>
-        <option value="">Modalidad</option>
-        <option value="Presencial">Presencial</option>
-        <option value="Remoto">Remoto</option>
-        <option value="Híbrido">Remoto</option>
-    </select>
-    <select>
-        <option value="">Tipo de tabajo</option>
-        <option value="Practicante">Practicante</option>
-        <option value="Auxiliar">Auxiliar</option>
-        <option value="Junior">Junior</option>
-        <option value="Trainee">Trainee</option>
-        <option value="Voluntario">Voluntario</option>
-    </select>
-    <input type="text" placeholder="Ubicación" />
-    <select>
-        <option value="">Habilidad requerida</option>
-        <option value="Excel">Excel</option>
-        <option value="Python">Python</option>
-    </select>
-    <select>
-        <option value="">Idioma requerido</option>
-        <option value="Español">Español</option>
-        <option value="Inglés">Inglés</option>
-        <option value="Italiano">Italiano</option>
-        <option value="Francés">Francés</option>
-        <option value="Alemán">Alemán</option>
-    </select>
+    <div class="campo vacante-grid">
+      <input type="text" placeholder="Título" />
+      <input placeholder="Descripción">
+    </div>
+    
+    <div class="campo vacante-grid">
+      <input type="number" placeholder="Salario" />
+      <input type="text" placeholder="Ubicación" />
+    </div>
+    <div class="campo vacante-grid-triple">
+      <select>
+          <option value="">Modalidad</option>
+          <option value="Presencial">Presencial</option>
+          <option value="Remoto">Remoto</option>
+          <option value="Híbrido">Híbrido</option>
+      </select>
+      <select>
+          <option value="">Tipo de trabajo</option>
+          <option value="Practicante">Practicante</option>
+          <option value="Auxiliar">Auxiliar</option>
+          <option value="Junior">Junior</option>
+          <option value="Trainee">Trainee</option>
+          <option value="Voluntario">Voluntario</option>
+      </select>
+      <select>
+          <option value="">Habilidad requerida</option>
+          <option value="Excel">Excel</option>
+          <option value="Python">Python</option>
+      </select>
+    </div>
+    <div class="campo">
+      <select>
+          <option value="">Idioma requerido</option>
+          <option value="Español">Español</option>
+          <option value="Inglés">Inglés</option>
+          <option value="Italiano">Italiano</option>
+          <option value="Francés">Francés</option>
+          <option value="Alemán">Alemán</option>
+      </select>
+    </div>
   </div>
+  
   <button class="agregar" (click)="agregarVacante()">AGREGAR</button>
 
-  <div class="campo">
-    <div class="mini-titulo">
-      <img src="assets/img/icono-certificado.png" class="icon" />
-      <label>Certificados</label>
-    </div>
+  <div class="mini-titulo">
+    <img src="assets/img/icono-certificado.png" class="icon" />
+    <label>Certificados</label>
+  </div>
+  <div class="campo vacante-grid">
     <input type="text" placeholder="Nombre" />
     <input type="text" placeholder="Entidad emisora" />
-    <input type="date" placeholder="Fecha de emisión" />
-    <input type="date" placeholder="Fecha de caducidad" />
+  </div>
+  <div class="campo fecha-certificados">
+    <input type="date" placeholder="dd/mm/aaaa" />
+    <input type="date" placeholder="dd/mm/aaaa" />
   </div>
 
   <button class="btn-guardar">Guardar</button>
