--- a/Frontend/src/app/features/signup/signup.css
+++ b/Frontend/src/app/features/signup/signup.css
@@ -46,7 +46,7 @@ section {
 
 h2 {
   font-size: 40px;
-  font-family: 'Syne', sans-serif !important;
+  font-family: 'Syne', sans-serif;
   font-weight: 700;
   letter-spacing: normal;
   margin-bottom: 1rem;
@@ -58,6 +58,8 @@ a {
   text-align: center;
   color: var(--white);
   font-size: 16px;
+  justify-self: center;
+  cursor: pointer;
   transition: color 0.3s;
 }
 
@@ -67,7 +69,7 @@ a:hover {
 }
 
 label {
-  font-family: 'Raleway', sans-serif !important;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: var(--white);
