--- a/Frontend/src/app/features/signup/signup.html
+++ b/Frontend/src/app/features/signup/signup.html
@@ -1,48 +1,52 @@
 <section class="backgroud">
   <div class="signupForm">
     <h2>Registrate</h2>
-    <form>
       <div class="link">
-        <a routerLink="/signup-empresa">¿Eres empresa y buscas registrarte? <br />
+        <a routerLink="/signup-empresa"
+          >¿Eres empresa y buscas registrarte? <br />
           Haz click aqui
         </a>
       </div>
 
       <div class="form">
-        <label>Nombres</label>
-        <input type="text" id="name" />
+        <form [formGroup]="signupForm">
+          <label>Nombres</label>
+          <input type="text" id="name" formControlName="name" />
 
-        <label>Apellidos</label>
-        <input type="text" id="lastname" />
+          <label>Apellidos</label>
+          <input type="text" id="lastname"  formControlName="lastname"/>
 
-        <label>Email</label>
-        <input type="email" id="email" name="email" placeholder="Ingresa tu email" required />
+          <label>Email</label>
+          <input type="email" id="email" name="email" placeholder="Ingresa tu email"  formControlName="email" required />
 
-        <label for="password">Contraseña</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Ingresa tu contraseña"
-          required
-        />
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Ingresa tu contraseña"
+             formControlName="password"
+            required
+          />
 
-        <label for="password">Confirmar contraseña</label>
-        <input
-          type="password"
-          id="repassword"
-          name="repassword"
-          placeholder="Ingresa tu contraseña"
-          required
-        />
+          <label for="password">Confirmar contraseña</label>
+          <input
+            type="password"
+            id="repassword"
+            name="repassword"
+            placeholder="Ingresa tu contraseña"
+             formControlName="repassword"
+            required
+          />
+        </form>  
       </div>
+      
       <div class="link">
-        <button type="submit">Registrar</button>
+        <button type="submit" (click)='OnSignUp()'>Registrar</button>
         <a routerLink="/login">
           ¿Ya eres miembro? <br />
           Inicia Sesión
         </a>
       </div>
-    </form>
   </div>
 </section>
